syntax = "proto3";

import "protocol/game/header.proto";
import "protocol/game/misc.proto";

package protocol;

option go_package = "./protobufs/protocol/game_protocol";

message GameClientProtocol {
	protocol.GameProtocolHeader header = 1;
	PlayerPov player_pov = 2;
}

message PlayerPov {
	uint32 team_1_score = 1;
	uint32 team_2_score = 2;
	uint32 team_1_points = 3;
	uint32 team_2_points = 4;
	repeated HandCard hand_cards = 5;
	repeated protocol.TableCard played_cards = 6;
	optional Auction auction = 7;
	optional protocol.CardSuit trump = 8;
	bool cheat_button = 9;
	repeated Player players = 10;
}

message Player {
	string id = 1;
	string name = 2;
	string avatar = 3;
}

message HandCard {
	protocol.Card card = 1;
	CardState state = 2;
}

message TableCard {
	optional protocol.Card card = 1;
}

message Auction {
	bool visible = 1;
	repeated Bid bids = 2;
	uint32 max_bid = 3;
}

message Bid {
	optional uint32 value = 1;
}

enum CardState {
	DISABLED = 0;
	ENABLED = 1;
}
